src/objects/Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>This is a value that can be used as the key in a key/value pair.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a value that can be used as the key in a key/value pair.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Setting</label>
</CustomObject>